istiofiles/istio-ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mungta-gateway
  namespace: mungta
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mungta-gateway
  namespace: mungta
spec:
  hosts:
    - "*"
  gateways:
    - mungta-gateway
  http:
    - name: "mungta-front-route"
      route:
        - destination:
            host: mungta-front
            port:
              number: 3000
